<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ibemakale.MainActivity" >

        <TextView
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hangi tadi tercih edersiniz? (Tatli, tuzli , eksi, aci)" />

        <Spinner
            android:id="@+id/ra1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/a1"
            android:entries="@array/firildaksoru5"
            android:prompt="@string/firildaksoru5" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/ra1"
            android:layout_marginTop="10dp"
            android:background="@drawable/separator" >
        </View>

        <TextView
            android:id="@+id/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ra1"
            android:layout_marginTop="20dp"
            android:text="Eğitim Durumunuz Nedir?" />

        <Spinner
            android:id="@+id/rra1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/a2"
            android:entries="@array/firildaksoru4"
            android:prompt="@string/firildaksoru4" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/rra1"
            android:layout_marginTop="10dp"
            android:background="@drawable/separator" >
        </View>

        <TextView
            android:id="@+id/a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rra1"
            android:layout_marginTop="20dp"
            android:text="Hangi Ehliyet Türüne Sahipsiniz?" />

        <Spinner
            android:id="@+id/rrra1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/a3"
            android:entries="@array/firildaksoru3"
            android:prompt="@string/firildaksoru3" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/rrra1"
            android:layout_marginTop="10dp"
            android:background="@drawable/separator" >
        </View>

        <TextView
            android:id="@+id/a4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rrra1"
            android:layout_marginTop="20dp"
            android:text="Kaç defa internet üzerinden alış veriş yaptınız?" />

        <Spinner
            android:id="@+id/rrrra1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/a4"
            android:entries="@array/firildaksoru2"
            android:prompt="@string/firildaksoru2" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/rrrra1"
            android:layout_marginTop="10dp"
            android:background="@drawable/separator" >
        </View>

        <TextView
            android:id="@+id/a5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rrrra1"
            android:layout_marginTop="20dp"
            android:text="En sevdiğiniz renk hangisidir?" />

        <Spinner
            android:id="@+id/rrrrra1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/a5"
            android:entries="@array/firildaksoru"
            android:prompt="@string/firildaksoru" />

        <Button
            android:id="@+id/rq2"
            android:layout_width="fill_parent"
       	    android:layout_height="60dp"
            android:layout_below="@+id/rrrrra1"
            android:layout_marginTop="40dp"
            android:text="TESTI BITIR!!!" />

        <Chronometer
            android:id="@+id/stopwatch"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/rq2"
            android:layout_weight="0"
            android:paddingBottom="20dip"
            android:paddingTop="20dip" />

        <Button
            android:id="@+id/rq3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stopwatch"
            android:layout_marginTop="40dp"
            android:text="S" />
    </RelativeLayout>

</ScrollView>